--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body class="bg-gray-100">
   <div class="container mx-auto p-4" x-data="app()" x-init="mounted()">
-    <div class="mb-4 flex items-center space-x-4">
+    <div class="mb-4 md:flex items-center md:space-x-4 space-y-4 md:space-y-0">
       <div class="flex-1">
-        <label for="amount" class="block text-gray-700 text-sm font-bold mb-2">Amount (€):</label>
-        <input id="amount" type="number" min="0" step="0.01"
+        <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description:</label>
+        <input id="description" type="text"
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          x-model.number="amount" placeholder="Enter the amount of the expense">
+          x-model.trim="description" placeholder="Enter a description of the expense">
       </div>
       <div class="flex-1">
         <label for="payer" class="block text-gray-700 text-sm font-bold mb-2">Payer:</label>
@@ -28,10 +28,10 @@
         </select>
       </div>
       <div class="flex-1">
-        <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description:</label>
-        <input id="description" type="text"
+        <label for="amount" class="block text-gray-700 text-sm font-bold mb-2">Amount (€):</label>
+        <input id="amount" type="number" min="0" step="0.01"
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          x-model.trim="description" placeholder="Enter a description of the expense">
+          x-model.number="amount" placeholder="Enter the amount of the expense">
       </div>
     </div>
     <div class="mb-4">
